Finish GANs and start data structures

--- a/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
+++ b/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
@@ -10,9 +10,9 @@
     "date: \"2024-04-10\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, GenerativeAI, GAN]\n",
-    "format:\n",
-    "  html:\n",
-    "    code-fold: true\n",
+    "# format:\n",
+    "#   html:\n",
+    "#     code-fold: true\n",
     "---"
    ]
   },
@@ -25,12 +25,12 @@
     "Notes on Generative Adversarial Networks (GANs).\n",
     "\n",
     "::: {.callout-tip title=\"Story Time\"}\n",
-    "Imagine a forger trying to forge £20 notes and the popo trying to stop them.\n",
+    "Imagine a forger trying to forge £20 notes and the police trying to stop them.\n",
     "\n",
-    "The popo learn to spot the fakes.\n",
+    "The police learn to spot the fakes.\n",
     "But then the forger learns to improve their forging skills to make better fakes.\n",
     "\n",
-    "This goes back and forth. With each iteration, the forger keeps getting better but then the popo learn to spot these more sophisticated fakes.\n",
+    "This goes back and forth. With each iteration, the forger keeps getting better but then the police learn to spot these more sophisticated fakes.\n",
     "\n",
     "The results in a forger (generator) learning to create convincing fakes and the popo (discriminator) learning to spot fakes.\n",
     ":::\n",
@@ -1148,6 +1148,20 @@
     "\n",
     "\n",
     "### 5.3. Gradient Penalty Loss\n",
+    "\n",
+    "The gradient penalty (GP) loss term encourages gradients towards 1 to conform to the 1-Lipschitz continuous constraint.\n",
+    "\n",
+    "The GP loss measures the squared difference between *the norm of the gradient of predictions w.r.t. input images* and 1, i.e.\n",
+    "$$\n",
+    "loss_{GP} = (||\\frac{\\delta predictions}{\\delta input}|| - 1)^2\n",
+    "$$\n",
+    "\n",
+    "Calculating this everywhere during the training process would be computationally intensive. Instead we evaluate it at a sample of points. To encourage a balanced mix, we use an interpolated image which is a pairwise weighted average of a real image and a generated image.\n",
+    "\n",
+    "The combined loss function is then a weighted sum of the Wasserstein loss and the GP loss:\n",
+    "$$\n",
+    "loss = loss_{Wasserstein} + \\lambda_{GP} * loss_{GP}\n",
+    "$$\n",
     "\n",
     "\n",
     "### 5.4. Training the WGAN-GP\n",
