--- a/posts/software/data_structures_algos/data_structures/DataStructuresNotes.ipynb
+++ b/posts/software/data_structures_algos/data_structures/DataStructuresNotes.ipynb
@@ -110,7 +110,7 @@
     "1. Delete the element. This leaves a gap in the middle of the array.\n",
     "2. Shift each of the elements to the right of the gap leftwards, to fill the gap.\n",
     "\n",
-    "So to delete at index $i$, we do 1 operation to delete that element (Step 1), then shift $N-i$ leftwards (Step 2).\n",
+    "So to delete at index $i$, we do 1 operation to delete that element (Step 1), then shift the next $N-i$ elements leftwards (Step 2).\n",
     "\n",
     "In the worst case - deleting the first element of the array - deletion is **O(N)**.\n",
     "\n",
@@ -351,11 +351,17 @@
    "id": "f38badae",
    "metadata": {},
    "source": [
-    "## Ordered Arrays\n",
+    "<!-- ## Ordered Arrays\n",
     "\n",
     "\n",
-    "# Algorithms"
+    "# Algorithms -->"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a2fd2f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
