--- a/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
+++ b/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
@@ -10,9 +10,9 @@
     "date: \"2024-04-10\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, GenerativeAI, GAN]\n",
-    "format:\n",
-    "  html:\n",
-    "    code-fold: true\n",
+    "# format:\n",
+    "#   html:\n",
+    "#     code-fold: true\n",
     "---"
    ]
   },
@@ -25,12 +25,12 @@
     "Notes on Generative Adversarial Networks (GANs).\n",
     "\n",
     "::: {.callout-tip title=\"Story Time\"}\n",
-    "Imagine a forger trying to forge £20 notes and the popo trying to stop them.\n",
+    "Imagine a forger trying to forge £20 notes and the police trying to stop them.\n",
     "\n",
-    "The popo learn to spot the fakes.\n",
+    "The police learn to spot the fakes.\n",
     "But then the forger learns to improve their forging skills to make better fakes.\n",
     "\n",
-    "This goes back and forth. With each iteration, the forger keeps getting better but then the popo learn to spot these more sophisticated fakes.\n",
+    "This goes back and forth. With each iteration, the forger keeps getting better but then the police learn to spot these more sophisticated fakes.\n",
     "\n",
     "The results in a forger (generator) learning to create convincing fakes and the popo (discriminator) learning to spot fakes.\n",
     ":::\n",
@@ -1080,15 +1080,135 @@
     "1. A meaningful loss metric that correlates with generator convergence. This allows for better monitoring of training.\n",
     "2. More stable optimisation process.\n",
     "\n",
-    "### 5.1. Wasserstein Loss\n",
+    "### 5.1. Wassertein Loss\n",
+    "\n",
+    "#### Revisiting Binary Cross-Entropy Loss\n",
+    "First, recall the **binary cross-entropy loss**, which is defined as:\n",
+    "$$\n",
+    "-\\frac{1}{n} \\sum_{i=1}^{n}{y_i log(p_i) + (1 - y_i)log(1-p_i)}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "In a regular GAN, the discriminator compares the predictions for real images $p_i = D(x_i)$ to the response $y_i = 1$, and it compares the predictions for generated images $p_i = D(G(z_i))$ to the response $y_i = 0$.\n",
+    "\n",
+    "So the discriminator loss minimisation can be written as:\n",
+    "$$\n",
+    "\\min_{D} -(E_{x \\sim p_X}[log D(x)] + E_{z \\sim p_Z}[log (1 - D(G(z))] )\n",
+    "$$\n",
+    "\n",
+    "The generator aims to trick the discriminator into believing the images are real, so it compares the discriminator's predicted response to the desired response of $y_i=1$.\n",
+    "So the generator loss minimisation can be written as:\n",
+    "$$\n",
+    "\\min_{G} -(E_{z \\sim p_Z}[log D(G(z)] )\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "#### Introducing Wasserstein Loss\n",
+    "In contrast , the **Wasserstein loss function** is defined as:\n",
+    "$$\n",
+    "-\\frac{1}{n} \\sum_{i=1}^{n}{y_i p_i}\n",
+    "$$\n",
+    "\n",
+    "It requires that we use $y_i=1$ and $y_i=-1$ as labels rather than 1 and 0. We also remove the final sigmoid activation layer, which constrained the output to the range $[0, 1]$, meaning the output can now be any real number in the range $(-\\infty, \\infty)$.\n",
+    "\n",
+    "Because of these changes, rather than referring to a *discriminator* which outputs a *probability*, for WGANs we refer to a *critic* which outputs a *score*.\n",
+    "\n",
+    "With these changes of labels to -1 and 1, the critic loss minimisation becomes:\n",
+    "$$\n",
+    "\\min_{D} -(E_{x \\sim p_X}[D(x)] - E_{z \\sim p_Z}[D(G(z)] )\n",
+    "$$\n",
+    "\n",
+    "i.e. it aims to maximise the difference in predictions between real and generated images.\n",
+    "\n",
+    "The generator is still trying to trick the critic as in a regular GAN, so it wants the critic to score its generated images as highly as possible. To this end, it still compares to the desired critic response of $y_i=1$ corresponding to the critic believing the generated image is real. So the generator loss minimisation remains similar, just without the log:\n",
+    "$$\n",
+    "\\min_{G} -(E_{z \\sim p_Z}[D(G(z)] )\n",
+    "$$\n",
+    "\n",
     "\n",
     "### 5.2. Lipschitz Constraint\n",
     "\n",
+    "Allowing the critic to use the range $(-\\infty, \\infty)$ initially seems a bit counterintuitive - usually we want to avoid large numbers in neural networks otherwise gradients explode!\n",
+    "\n",
+    "There is an additional constraint placed on the critic requiring it to be a *1-Lipschitz continuous function*. This means that for any two input images, $x_1$ and $x_2$, it satisfied the following inequality:\n",
+    "$$\n",
+    "\\frac{| D(x_1) - D(x_2) |}{| x_1 - x_2 |} \\le 1\n",
+    "$$\n",
+    "\n",
+    "Recall that the critic is a function $D$ which converts an image into a scalar prediction. The numerator is the change in predictions, and the denominator is the average pixelwise difference. So this is essentially a limit on how sharply the critic predictions are allowed to change for a given image perturbation.\n",
+    "\n",
+    "An in-depth exploration of why the Wasserstein loss requires this constraint is given [here](https://jonathan-hui.medium.com/gan-wasserstein-gan-wgan-gp-6a1a2aa1b490).\n",
+    "\n",
+    "\n",
+    "#### Enforcing the Lipschitz Constraint\n",
+    "\n",
+    "One crude way of enforcing the constraint suggested by the original authors (and described as \"a terrible way to enforce a Lipschitz constraint) is to clip the weights to $[-0.01, 0.01]$ after each training batch. However, this diminishes the critic's ability to learn.\n",
+    "\n",
+    "An improved approach is to introduce a gradient penalty term to penalise the gradient norm when it deviates from 1.\n",
+    "\n",
+    "\n",
     "### 5.3. Gradient Penalty Loss\n",
+    "\n",
+    "The gradient penalty (GP) loss term encourages gradients towards 1 to conform to the 1-Lipschitz continuous constraint.\n",
+    "\n",
+    "The GP loss measures the squared difference between *the norm of the gradient of predictions w.r.t. input images* and 1, i.e.\n",
+    "$$\n",
+    "loss_{GP} = (||\\frac{\\delta predictions}{\\delta input}|| - 1)^2\n",
+    "$$\n",
+    "\n",
+    "Calculating this everywhere during the training process would be computationally intensive. Instead we evaluate it at a sample of points. To encourage a balanced mix, we use an interpolated image which is a pairwise weighted average of a real image and a generated image.\n",
+    "\n",
+    "The combined loss function is then a weighted sum of the Wasserstein loss and the GP loss:\n",
+    "$$\n",
+    "loss = loss_{Wasserstein} + \\lambda_{GP} * loss_{GP}\n",
+    "$$\n",
+    "\n",
     "\n",
     "### 5.4. Training the WGAN-GP\n",
     "\n",
-    "### 5.5. Analysing the WGAN-GP\n"
+    "When training WGANs, we train the critic to convergence and then the train the generator. This ensures the gradients used for the generator update are accurate.\n",
+    "\n",
+    "This is a major benefit over traditional GANs, where we must balance the alternating training of generator and discriminator.\n",
+    "\n",
+    "We train the critic several times between each generator training step. A typical ratio is 3-5 critic updates for each generator update.\n",
+    "\n",
+    "Note that **batch normalisation shouldn't be used for WGAN-GP** because it creates correlation between images of a given batch, which makes the GP term less effective.\n",
+    "\n",
+    "\n",
+    "### 5.5. Analysing the WGAN-GP\n",
+    "\n",
+    "Images produced by VAEs tend to produce softer images that blur colour boundaries, whereas GANs produce sharper, more well-defined.\n",
+    "\n",
+    "However, GANs typically take longer to train and can be more sensitive to hyperparameter choices to reach a satisfactory result.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Conditional GAN (CGAN)\n",
+    "\n",
+    "Conditional GANs allow us to control the *type* of image that is generated. For example, should we generate a large or small brick? A male or female face?\n",
+    "\n",
+    "\n",
+    "### 6.1. CGAN Architecture\n",
+    "\n",
+    "The key difference of a CGAN is we pass a one-hot encoded label.\n",
+    "\n",
+    "For the generator, we append the one-hot encoded label vector to the random noise input to the generator.\n",
+    "For the critic, we append the one-hot encoded label vector to the image. If it has multiple channels, as in an RGB image, the label vector is repeated on each of the channels to fit the required shape.\n",
+    "\n",
+    "The critic can now see the label, which means the generator needs to create images that match the generated labels. If the generated image was inconsistent with the generated label, then the critic could use this to easily distinguish the fakes.\n",
+    "\n",
+    "> The only change required to the architecture is to concatenate the label to the inputs of the discriminator (actual training labels) and the generator (initially randomised vectors of the correct shape).\n",
+    "\n",
+    "The images and labels are unpacked during the training step.\n",
+    "\n",
+    "### 6.2. Using the CGAN\n",
+    "\n",
+    "We can control the type of image generated by passing a particular one-hot encoded label into the input of the generator.\n",
+    "\n",
+    "If labels are available for your training data, it is generally a good idea to include them in the inputs even if you don't intend to create a conditional GAN from it. They tend to improve the quality of the output generated, since the labels act as a highly informative extension of the pixel inputs.\n"
    ]
   },
   {
@@ -1099,14 +1219,10 @@
     }
    },
    "source": [
-    "## 6. Conditional GAN (CGAN)\n",
-    "\n",
-    "### 6.1. CGAN Architecture\n",
-    "\n",
-    "\n",
     "## References\n",
     "\n",
-    "- Chapter 4 of Generative Deep Learning by David Foster.\n"
+    "- Chapter 4 of Generative Deep Learning by David Foster.\n",
+    "- [Wasserstein loss and Lipschitz constraint](https://jonathan-hui.medium.com/gan-wasserstein-gan-wgan-gp-6a1a2aa1b490)"
    ]
   },
   {
