--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -351,16 +351,286 @@
    "id": "f38badae",
    "metadata": {},
    "source": [
-    "<!-- ## Ordered Arrays\n",
+    "## 4. Ordered Arrays\n",
+    "\n",
+    "These are identical to regular arrays with the additional condition that elements are always ordered.\n",
+    "\n",
+    "This obviously relies heavily on efficient sorting. This is a topic unto itself; see notes on sorting for more info.\n",
+    "\n",
+    "When **inserting** into an ordered array, we need to:\n",
+    "\n",
+    "1. Search for the correct position - Look at each element in turn and compare if the insert element is greater than it\n",
+    "2. Insert into the array\n",
+    "\n",
+    "These two terms increase in opposite directions depending on the insert position. The further into the array we need to search (Step 1), the fewer elements we need to shift for the insertion (Step 2).\n",
     "\n",
     "\n",
-    "# Algorithms -->"
+    "### 4.1. Binary Search\n",
+    "\n",
+    "In a typical (unordered) array, the only option for searching is a *linear search*: we loop through each element in turn until we find our target.\n",
+    "\n",
+    "For an ordered array, we can improve on this using a **binary search**.\n",
+    "\n",
+    "1. Pick the middle element. \n",
+    "2. If the target value is greater than this, search the right half, otherwise search the left half.\n",
+    "3. Repeat this recursively until we find our target.\n",
+    "\n",
+    "\n",
+    "This approach splits the search region in half for every constant time comparison operation.\n",
+    "\n",
+    "Or put another way, if we doubled the number of elements in the array, the binary search would only have to perform 1 extra step. For $N$ elements we need $log_2(N)$ binary splits.\n",
+    "\n",
+    "Therefore, the time complexity is **O(log(N))**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "00d5950d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(ordered_array, target):\n",
+    "    \"\"\"Perform a binary search for the target value on the given ordered array.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ordered_array: list\n",
+    "        The array to search in.\n",
+    "    target: int\n",
+    "        The target value we are searching for.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    target_index: int\n",
+    "        The index of the target value.\n",
+    "        Returns None if the value does not exist in the array.\n",
+    "    \"\"\"\n",
+    "    # Establish the lower and upper bounds of our search.\n",
+    "    # Initially, this is the entire array\n",
+    "    idx_lower = 0\n",
+    "    idx_upper = len(ordered_array) - 1\n",
+    "\n",
+    "    while idx_lower <= idx_upper:\n",
+    "        # Find the midpoint between our bounds\n",
+    "        idx_midpoint = (idx_upper + idx_lower) // 2\n",
+    "        value_at_midpoint = ordered_array[idx_midpoint]\n",
+    "\n",
+    "        # Compare to our target value and narrow the upper or lower bound accordingly\n",
+    "        if value_at_midpoint == target:\n",
+    "            # We have found the target!\n",
+    "            return idx_midpoint\n",
+    "        elif value_at_midpoint < target:\n",
+    "            # The target is bigger so must be to the right side\n",
+    "            idx_lower = idx_midpoint + 1\n",
+    "        elif value_at_midpoint > target:\n",
+    "            # The target is smaller so must be on the left side\n",
+    "            idx_upper = idx_midpoint - 1\n",
+    "\n",
+    "    # If the lower and upper bounds meet we have exhausted the whole array, so the target is not in the array\n",
+    "    return None"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c436636e",
+   "metadata": {},
+   "source": [
+    "Let's try this on a few examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "39a2fd2f",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "ordered_array = [1, 2, 4, 5, 7, 8, 9, 10, 13, 14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f4703523",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(ordered_array, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d8cb4c44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(ordered_array, 14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a57a90e4",
+   "metadata": {},
+   "source": [
+    "Now a value that's not in the array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7c0945cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(ordered_array, 14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0606d276",
+   "metadata": {},
+   "source": [
+    "Compare this with a linear search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "23677ede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_search(array, target):\n",
+    "    \"\"\"Perform a linear search for the target value on the given array.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array to search in.\n",
+    "    target: int\n",
+    "        The target value we are searching for.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    target_index: int\n",
+    "        The index of the target value.\n",
+    "        Returns None if the value does not exist in the array.\n",
+    "    \"\"\"\n",
+    "    # Loop through every element in the array.\n",
+    "    # Note: we should really use enumerate() rather than range(len()) but I wanted to keep this generic \n",
+    "    # without too many python-specific helpers\n",
+    "    for idx in range(len(array)):\n",
+    "        if array[idx] == target:\n",
+    "            return idx\n",
+    "    \n",
+    "    # If we reach the end of the array without returning a value, then the target does not exist in the array.\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc72a69",
+   "metadata": {},
+   "source": [
+    "Let's compare how they perform for a reasonably big array with 1 million elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c41d3476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [k for k in range(1000000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.13 µs ± 56.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "binary_search(array, 987654)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "bb5d3a90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.9 ms ± 320 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "linear_search(array, 987654)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "530d113f",
+   "metadata": {},
+   "source": [
+    "The binary search is ~14000x faster than the linear search!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55589e56",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -380,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
