Insertion sort notes

--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -33,6 +33,8 @@
     "\n",
     "\n",
     "## 1. Bubble Sort\n",
+    "\n",
+    "### 1.1. Algorithm\n",
     "We \"bubble up\" the next highest unsorted number on each pass-through.\n",
     "\n",
     "1. Start with 2 pointers pointing at the first two values in the array. \n",
@@ -60,7 +62,7 @@
     "    Parameters\n",
     "    ----------\n",
     "    array: list\n",
-    "        The array that we wish to sort\n",
+    "        The array that we wish to sort.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -116,6 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.2. Complexity\n",
+    "\n",
     "Each pass through loops through one fewer element:\n",
     "\n",
     "Pass-through number | Number of operations\n",
@@ -145,6 +149,8 @@
    "source": [
     "## 2. Selection Sort\n",
     "\n",
+    "### 2.1. Algorithm\n",
+    "\n",
     "Find the smallest value from the unsorted part of the array and put it at the beginning.\n",
     "\n",
     "1. Check each cell of the array from left to right to find the lowest value. Store the index of the running minimum value.\n",
@@ -159,7 +165,18 @@
    "outputs": [],
    "source": [
     "def selection_sort(array):\n",
-    "    \"\"\"Selection sort algorithm to sort an array into ascending order.\"\"\"\n",
+    "    \"\"\"Selection sort algorithm to sort an array into ascending order.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The input array sorted in-place.\n",
+    "    \"\"\"\n",
     "    array_length = len(array)\n",
     "\n",
     "    # Loop through all array elements\n",
@@ -202,6 +219,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.2. Complexity\n",
+    "\n",
     "As with bubble sort, on each pass-through we loop through one fewer element, so there are $\\frac{N^2}{2}$ comparisons. But each pass-through only performs 1 swap, so the total number of operations is $\\frac{N^2}{2} + N$.\n",
     "\n",
     "This is still therefore **$O(N^2)$** complexity, but it should be about twice as fast as bubble sort."
@@ -211,8 +230,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Insertion Sort"
+    "## 3. Insertion Sort\n",
+    "### 3.1. Algorithm\n",
+    "Remove a value to create a gap, shift values along to move the gap leftwards, then fill the gap.\n",
+    "\n",
+    "1. **Create a gap.** For the first pass-through, we temporarily remove the second cell (i.e. index 1) and store it as a temporary variable. This leaves a gap at that index.\n",
+    "2. **Shifting phase.** Take each value to the left of the gap and compare it to the temporary variable. if `left_val > temp_val`, move left value to the right. This has the same effect as moving the gap leftwards. As soon as we encounter a value where `left_val < temp_val` the shifting phase is complete.\n",
+    "3. **Fill the gap.** Insert the temporary value into the current gap.\n",
+    "4. **Repeat pass-throughs.** Steps 1-3 constitute a single pass-through. Repeat this until the pass through begins at the final index of the array. At this point the array is sorted."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertion_sort(array):\n",
+    "    \"\"\"Insertion sort algorithm to sort an array into ascending order.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The input array sorted in-place.\n",
+    "    \"\"\"\n",
+    "    array_len = len(array)\n",
+    "\n",
+    "    for pass_thru_number in range(1, array_len):\n",
+    "        # 1. Create a gap\n",
+    "        temp_val = array[pass_thru_number]\n",
+    "        gap_idx = pass_thru_number\n",
+    "\n",
+    "        # 2. Shifting phase\n",
+    "        # Move leftwards from the gap and keep shifting elements right if they are greater than temp_val\n",
+    "        while (gap_idx > 0) and (array[gap_idx - 1] > temp_val):\n",
+    "            array[gap_idx] = array[gap_idx - 1]\n",
+    "            gap_idx -= 1\n",
+    "\n",
+    "        # 3. Fill the gap\n",
+    "        array[gap_idx] = temp_val\n",
+    "\n",
+    "    return array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "insertion_sort(input_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2. Complexity\n",
+    "\n",
+    "The worst case is when the input array is sorted in descending order. \n",
+    "\n",
+    "There are 4 types of operations that occur:\n",
+    "\n",
+    "\n",
+    "##### Comparisons\n",
+    "If we compare values to the left of the gap on each step, there will be 1 comparison on the first pass-through, 2 on the second, 3 on the third, etc.\n",
+    "\n",
+    "So there are $1 + 2 + ... + N-1 = \\frac{N^2}{2}$ comparisons in the worst case.\n",
+    "\n",
+    "##### Shifts\n",
+    "Each comparison could result in a shift, so there are the same number of shifts as comparisons in the worst case.\n",
+    "\n",
+    "##### Removals and Insertions\n",
+    "We remove 1 temp value per pass-through, so there are $N-1$ removals.\n",
+    "\n",
+    "We insert that value at the end of each pass-through, so there are also $N-1$ insertions.\n",
+    "\n",
+    "\n",
+    "##### Total\n",
+    "\n",
+    "Operation   | Number\n",
+    "------------|-------\n",
+    "Removals    | $N-1$\n",
+    "Comparisons | $\\frac{N^2}{2}$\n",
+    "Shifts      | $\\frac{N^2}{2}$\n",
+    "Insertions  | $N-1$\n",
+    "\n",
+    "Overall there are $N^2 + 2N - 2$ operations, so the complexity is $O(N^2)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
