Hash table and insertion sort notes

--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "---\n",
     "title: \"Data Structures\"\n",
-    "description: \"An Array of Possibilities\"\n",
+    "description: \"An Array of Possibilities, Heaps of Fun\"\n",
     "date: \"2024-04-17\"\n",
     "categories: [Engineering, ComputerScience, InterviewPrep]\n",
     "# format:\n",
@@ -626,11 +626,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "55589e56",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## 5. Hash Tables\n",
+    "\n",
+    "Hash tables are key:value pairs. We can look up a the value for a given key in $O(1)$ time.\n",
+    "\n",
+    "Also known as hash maps, dictionaries, maps, associative arrays.\n",
+    "\n",
+    "\n",
+    "### 5.1. Hashing\n",
+    "\n",
+    "The process of taking characters and converting them to numbers is called **hashing**.\n",
+    "\n",
+    "The code that performs this conversion is the **hash function**.\n",
+    "\n",
+    "A hash function requires one condition:\n",
+    "\n",
+    "> Consistency: A hash function must convert the same string to the same number every time it's applied.\n",
+    "\n",
+    "In practice, for the hash function to be useful, it should also be collision resistant:\n",
+    "\n",
+    "> Collision resistant: Different inputs should hash to different outputs.\n",
+    "\n",
+    "As an extreme example, the following hash function is consistent but not collision resistant:\n",
+    "```python\n",
+    "def crappy_hash(input_str: str) -> int:\n",
+    "    \"\"\"This is the world's worst hash function.\"\"\"\n",
+    "    return 1\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### 5.2. Hash Table Lookups\n",
+    "\n",
+    "We want to insert the following key:value pair into our hash table:\n",
+    "```\n",
+    "key = \"Name\"\n",
+    "value = \"Gurp\"\n",
+    "```\n",
+    "\n",
+    "Let's say we have a hash function that is actually good, and in this particular case `hash_function(key)` returns `12`.\n",
+    "\n",
+    "The hash table will then insert `value` at memory address `12` (or more specifically, the memory address of the head of the dictionary + 12).\n",
+    "\n",
+    "This means if we ever want to look up the key `\"Name\"`, we hash it and immediately know to access memory address 12 and return the value `\"Gurp\"`.\n",
+    "\n",
+    "So hash table lookups are $O(1)$.\n",
+    "\n",
+    "More specifically, looking up by **key** is $O(1)$. Searching by **value** is essentially searching through an array, so is $O(N)$.\n",
+    "\n",
+    "\n",
+    "### 5.3. Dealing with Collisions\n",
+    "\n",
+    "A **collision** occurs when we try to add data to a cell that is already occupied.\n",
+    "\n",
+    "One approach to handling this is called **separate chaining**.\n",
+    "\n",
+    "Instead of placing a single value in a cell, we place a *pointer to an array*. This array contains length-2 subarrays where the first element is the key and the second element is the value.\n",
+    "\n",
+    "If there are no collisions, a hash table look up is $O(1)$.\n",
+    "In the worst case, ALL keys collide and so we essentially have to search through an array which is $O(N)$.\n",
+    "\n",
+    "\n",
+    "### 5.4. Hash Table Efficiency\n",
+    "A hash tables efficiency depends on:\n",
+    "\n",
+    "1. How much **data** we're storing in it\n",
+    "2. How many **cells** are available\n",
+    "3. Which **hash function** we use\n",
+    "\n",
+    "A good hash function (3) should distribute the data (1) evenly across all cells (2).\n",
+    "\n",
+    "This ensures the memory is used efficiently while avoiding collisions.\n",
+    "\n",
+    "The **load factor** is the ratio of data to cells, and ideally should be around 0.7, i.e. 7 elements for every 10 cells.\n",
+    "\n",
+    "\n",
+    "| Operation | Complexity (Worst) | Complexity **(Average)** |\n",
+    "|-----------|--------------------|--------------------------|\n",
+    "| Read      | O(N)               | O(1)                     |\n",
+    "| Search    | O(N)               | Keys: O(1) Values: O(N)  |\n",
+    "| Insertion | O(N)               | O(1)                     |\n",
+    "| Deletion  | O(N)               | O(1)                     |\n",
+    "\n",
+    "The worst case corresponds to when all keys collide, reducing the hash table to an array effectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9c1cfe8",
+   "metadata": {},
    "source": []
   }
  ],
