--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -333,7 +333,29 @@
     "Shifts      | $\\frac{N^2}{2}$\n",
     "Insertions  | $N-1$\n",
     "\n",
-    "Overall there are $N^2 + 2N - 2$ operations, so the complexity is $O(N^2)$."
+    "Overall there are $N^2 + 2N - 2$ operations, so the complexity is $O(N^2)$.\n",
+    "\n",
+    "\n",
+    "### 3.3 The Average Case\n",
+    "\n",
+    "The complexity generally considers the worst case, but insertion sort varies greatly based on the input.\n",
+    "\n",
+    "We saw in the **worst case** the number of steps is $N^2 + 2N - 2$.\n",
+    "\n",
+    "In the **best case** the data is already sorted, so we do a remove and an insert on each pass-through, for a totla of $2N - 2$ steps.\n",
+    "\n",
+    "In the **average case**, let's assume about half of the data is already sorted. So we'll still need to do $N - 1$ removes and $N - 1$ inserts in total. We'll also need to compare about half the data, so $\\frac{N^2}{4}$ comparisons and the same number on swaps. This gives a total of $\\frac{N^2}{2} + 2N - 2$ steps.\n",
+    "\n",
+    "Depending on the state of the input data, the speed can vary considerably. Compare this to selection sort, which will always take $\\frac{N^2}{2}$ steps regardless of the input data.\n",
+    "\n",
+    "\n",
+    "Algorithm | Best Case | Average Case | Worst Case\n",
+    "----------|-----------|--------------|-----------\n",
+    "Selection sort | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$\n",
+    "Insertion sort | $N$ | $\\frac{N^2}{2}$ | $N^2$\n",
+    "\n",
+    "So the choice of which algorithm is \"best\" depends on the state of your input data. Both have the same $O(N^2)$ time complexity.\n",
+    "\n"
    ]
   },
   {
