Stacks and queues

--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -718,6 +718,352 @@
    "cell_type": "markdown",
    "id": "b9c1cfe8",
    "metadata": {},
+   "source": [
+    "## 6. Stacks\n",
+    "\n",
+    "A stack is stored in memory the same as an array, but it has 3 constraints:\n",
+    "\n",
+    "1. Data can only be **inserted** at the end (push)\n",
+    "2. Data can only be **deleted** from the end (pop)\n",
+    "3. Only the last element can be **read** (peek)\n",
+    "\n",
+    "> Read, insert and delete can only happen at the end.\n",
+    "\n",
+    "This makes them useful as Last-In First-Out (LIFO) data stores: the last item pushed the the stack is the first to be popped.\n",
+    "\n",
+    "Example in Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d91f1b89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stack:\n",
+    "\n",
+    "    def __init__(self, initial_elements: list = []):\n",
+    "        # We can pass a list to initialise the Stack\n",
+    "        self.data = initial_elements\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return str(self.data)\n",
+    "\n",
+    "    def push(self, element):\n",
+    "        self.data.append(element)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return self.data.pop()\n",
+    "\n",
+    "    def peek(self):\n",
+    "        if self.data:\n",
+    "            return self.data[-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b792b958",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack = Stack([1, 2, 3, 4])\n",
+    "stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f3b27f64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stack.push(5)\n",
+    "print(stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2024894b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack.peek()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "715abd79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d6b42ad6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d4f7f50d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stack)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9799f861",
+   "metadata": {},
+   "source": [
+    "The benefits of stacks, and other constrained data structures, are:\n",
+    "\n",
+    "1. Prevent potential bugs when using certain algorithms. For example, an algorithm that relies on stacks may break if removing elements from the middle of the array, so using a standard array is more error-prone.\n",
+    "2. A new mental model for tackling problems. In the case of stacks, this is the LIFO approach.\n",
+    "\n",
+    "\n",
+    "The concept of stacks is a useful precursor to recursion, as we push to and pop from the end of a stack."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c22dcb5a",
+   "metadata": {},
+   "source": [
+    "## 7. Queues\n",
+    "\n",
+    "A queue is conceptually similar to a stack - it is a constrained array. This time, it is First-In First-Out (FIFO) like a queue of people; the first person to arrive is the first to leave.\n",
+    "\n",
+    "Queue restrictions:\n",
+    "\n",
+    "1. Data can only be **inserted** at the **end** (enqueue)\n",
+    "2. Data can only be **deleted** from the **front** (dequeue)\n",
+    "3. Data can only be **read** from the **front** (peek)\n",
+    "\n",
+    "Points (2) and (3) are the opposite of the stack."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0baf7b51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Queue:\n",
+    "\n",
+    "    def __init__(self, initial_elements: list = []):\n",
+    "        # We can pass a list to initialise the Stack\n",
+    "        self.data = initial_elements\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return str(self.data)\n",
+    "\n",
+    "    def enqueue(self, element):\n",
+    "        self.data.append(element)\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        return self.data.pop(0)\n",
+    "\n",
+    "    def peek(self):\n",
+    "        if self.data:\n",
+    "            return self.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bbbdff9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = Queue([1, 2, 3, 4])\n",
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3746ed68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "q.enqueue(5)\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "685ce12b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.dequeue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c1eadd69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d03b5f01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.peek()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f46443f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a3b4c3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
