--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "---\n",
     "title: \"Data Structures\"\n",
-    "description: \"An Array of Possibilities, Heaps of Fun\"\n",
+    "description: \"An Array of Possibilities, Trie it Out, You'll Have Heaps of Fun\"\n",
     "date: \"2024-04-17\"\n",
     "categories: [Engineering, ComputerScience, InterviewPrep]\n",
     "# format:\n",
