--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -32,6 +32,13 @@
     "> Given an array of unsorted values, how can we sort them in ascending order?\n",
     "\n",
     "\n",
+    "Algorithm | Best Case | Average Case | Worst Case\n",
+    "----------|-----------|--------------|-----------\n",
+    "Bubble sort | $N^2$ | $N^2$ | $N^2$ \n",
+    "Selection sort | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$\n",
+    "Insertion sort | $N$ | $\\frac{N^2}{2}$ | $N^2$\n",
+    "Quicksort | $N log N$ | $N log N$ | $N^2$\n",
+    "\n",
     "## 1. Bubble Sort\n",
     "\n",
     "### 1.1. Algorithm\n",
@@ -361,6 +368,286 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 4. Quicksort\n",
+    "\n",
+    "Quicksort is a sorting algorithm that relies on the concept of **partitioning**.\n",
+    "\n",
+    "\n",
+    "### 4.1. Partitioning\n",
+    "\n",
+    "The idea behind partitioning is we take a random value from the array which we call the **pivot**. \n",
+    "\n",
+    "We then want to ensure any smaller numbers are left of the pivot and any larger numbers to its right.\n",
+    "\n",
+    "1. If we take the rightmost value as the pivot, we create a left pointer pointing at the leftmost value and a right pointer at the second from the right (i.e. not the pivot but the next rightmost).\n",
+    "2. The **left pointer** moves rightwards until it reaches a value >= the pivot value.\n",
+    "3. The **right pointer** moves leftwards until it reaches a value <= the pivot value.\n",
+    "4. If at this pointer the left pointer has crossed past the right pointer, move straight on to the next step. Otherwise swap the values that the left and right pointers are pointing at.\n",
+    "4. Swap the pivot value with the left pointer's value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partition(array):\n",
+    "    \"\"\"Partition an array around the rightmost value.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to partition.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The input array partitioned in-place.\n",
+    "    \"\"\"\n",
+    "    # 1. Initialise the pivot and pointers\n",
+    "    pivot_idx = len(array) - 1\n",
+    "    left_pointer_idx = 0\n",
+    "    right_pointer_idx = pivot_idx - 1\n",
+    "\n",
+    "    # Loop until the left and right pointers cross \n",
+    "    while left_pointer_idx < right_pointer_idx:\n",
+    "        # 2. Move the left pointer\n",
+    "        while (left_pointer_idx < pivot_idx) and (array[left_pointer_idx] < array[pivot_idx]):\n",
+    "            left_pointer_idx += 1\n",
+    "\n",
+    "        # 3. Move the right pointer\n",
+    "        while (right_pointer_idx > 0) and (array[right_pointer_idx] > array[pivot_idx]):\n",
+    "            right_pointer_idx -= 1\n",
+    "\n",
+    "        # 4. Swap values if the pointers haven't crossed yet, otherwise end the loop\n",
+    "        if left_pointer_idx < right_pointer_idx:\n",
+    "            array[left_pointer_idx], array[right_pointer_idx] = array[right_pointer_idx], array[left_pointer_idx]\n",
+    "\n",
+    "    # 5. Swap the pivot and left_pointer values\n",
+    "    array[left_pointer_idx], array[pivot_idx] = array[pivot_idx], array[left_pointer_idx]\n",
+    "\n",
+    "    return array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([8, 7, 5, 3, 1, 9, 0, 8, 12, 69, 420, 23], 8)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "partition(input_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Partitioning isn't the same as sorting the array, but it's \"sorted-ish\".\n",
+    "\n",
+    "\n",
+    "### 4.2. Quicksort Algorithm\n",
+    "\n",
+    "Quicksort is a combination of partitions and recursion.\n",
+    "\n",
+    "1. Partition the array. The **pivot** is now at the correct position in the sorted array.\n",
+    "2. Consider the subarrays to the left and the right of the pivot as their own arrays. We'll partition these recursively.\n",
+    "3. If a subarray has 0 or 1 elements, that is the base case and we do nothing; it is already sorted.\n",
+    "\n",
+    "We'll make a few tweaks to the partition function to take a start index and an end index, and to also return the pivot index. These extra parameters will allow us to call it recursively in quicksort."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partition(array, start_idx, end_idx):\n",
+    "    \"\"\"Partition an array around the rightmost value.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to partition.\n",
+    "    start_idx: int\n",
+    "        The start index of the array to consider.\n",
+    "    end_index: int\n",
+    "        The end index of the array to consider.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The input array partitioned in-place.\n",
+    "    final_pivot_idx: int\n",
+    "        The index position of the pivot point in the partitioned array.\n",
+    "    \"\"\"\n",
+    "    # 1. Initialise the pivot and pointers\n",
+    "    pivot_idx = end_idx\n",
+    "    left_pointer_idx = start_idx\n",
+    "    right_pointer_idx = pivot_idx - 1\n",
+    "\n",
+    "    # Loop until the left and right pointers cross \n",
+    "    while left_pointer_idx < right_pointer_idx:\n",
+    "        # 2. Move the left pointer\n",
+    "        while (left_pointer_idx < pivot_idx) and (array[left_pointer_idx] < array[pivot_idx]):\n",
+    "            left_pointer_idx += 1\n",
+    "\n",
+    "        # 3. Move the right pointer\n",
+    "        while (right_pointer_idx > 0) and (array[right_pointer_idx] > array[pivot_idx]):\n",
+    "            right_pointer_idx -= 1\n",
+    "\n",
+    "        # 4. Swap values if the pointers haven't crossed yet, otherwise end the loop\n",
+    "        if left_pointer_idx < right_pointer_idx:\n",
+    "            array[left_pointer_idx], array[right_pointer_idx] = array[right_pointer_idx], array[left_pointer_idx]\n",
+    "\n",
+    "    # 5. Swap the pivot and left_pointer values\n",
+    "    array[left_pointer_idx], array[pivot_idx] = array[pivot_idx], array[left_pointer_idx]\n",
+    "    final_pivot_idx = left_pointer_idx\n",
+    "\n",
+    "    return array, final_pivot_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([8, 7, 5, 3, 1, 9, 0, 8, 12, 69, 420, 23], 8)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "partition(input_array, 0, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quicksort(array, start_idx=0, end_idx=None):\n",
+    "    \"\"\"Quicksort algorithm to sort an array into ascending order.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "    start_idx: int\n",
+    "        The start index of the array to consider.\n",
+    "    end_index: int\n",
+    "        The end index of the array to consider.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The input array sorted in-place.\n",
+    "    \"\"\"\n",
+    "    end_idx = end_idx or len(array) - 1\n",
+    "\n",
+    "    # 3. Base case - an array of 0 or 1 elements is already sorted\n",
+    "    if len(array[start_idx: end_idx]) <= 1:\n",
+    "        return array\n",
+    "    \n",
+    "    # 1. Partition the array\n",
+    "    array, pivot_idx = partition(array, start_idx, end_idx)\n",
+    "\n",
+    "    # 2. Recursively partition the left and right subarrays\n",
+    "    quicksort(array, start_idx=start_idx, end_idx=pivot_idx - 1)\n",
+    "    quicksort(array, start_idx=pivot_idx + 1, end_idx=end_idx)\n",
+    "\n",
+    "    return array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3, 5, 7, 8, 9, 8, 12, 23, 69, 420]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "quicksort(input_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3. Complexity\n",
+    "\n",
+    "#### 4.3.1 Complexity of Partition\n",
+    "\n",
+    "Partitioning involves two steps:\n",
+    "\n",
+    "Operation   | Number\n",
+    "------------|-------\n",
+    "Swaps       | $N$\n",
+    "Comparisons | $\\frac{N^2}{2}$\n",
+    "\n",
+    "Each element is compared to the pivot point at least N times, because the left and right pointers move until they reach each other. So there are $N$ comparisons.\n",
+    "\n",
+    "Each swap handles two values, so in the worst case if we swapped every value there would be $\\frac{N}{2}$ swaps. On average, there'd be about half that, so $\\frac{N}{4}$.\n",
+    "\n",
+    "Either way, this means a single partition operation is $O(N)$.\n",
+    "\n",
+    "\n",
+    "#### 4.3.2. Complexity of Quicksort\n",
+    "\n",
+    "Quicksort performs multiple partitions. How many? \n",
+    "\n",
+    "In the best case, each partition would place the pivot directly in the middle of the subarray, spltting them clean in half each time. So there would be $log_2 N$ splits. \n",
+    "\n",
+    "In the average case this is \"close enough\". Not every level will split equally so there'll be a few extra but it will still be broadly symmetric, therefore a logarithmic function of $N$.\n",
+    "\n",
+    "In the worst case, every partition ends up on the left side, so with each partition we are effectively placing each element one-by-one from the left. This means we will partition $N$ times, and each has $O(N)$ complexity, resulting in a total compleixty of $O(N^2)$.\n",
+    "\n",
+    "\n",
+    "Algorithm | Best Case | Average Case | Worst Case\n",
+    "----------|-----------|--------------|-----------\n",
+    "Quicksort | $N log N$ | $N log N$ | $N^2$\n",
+    "\n",
+    "\n",
+    "### 4.4. Quickselect\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
