Finish Quicksort notes

--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -39,6 +39,9 @@
     "Insertion sort | $N$ | $\\frac{N^2}{2}$ | $N^2$\n",
     "Quicksort | $N log N$ | $N log N$ | $N^2$\n",
     "\n",
+    "Sorting is often a pre-requisite for other algorithms, so often as a pre-processing step we want to presort the array.\n",
+    "This means the efficiency of the sort is important to the overall efficiency of many other problem types.\n",
+    "\n",
     "## 1. Bubble Sort\n",
     "\n",
     "### 1.1. Algorithm\n",
@@ -640,14 +643,106 @@
     "Quicksort | $N log N$ | $N log N$ | $N^2$\n",
     "\n",
     "\n",
-    "### 4.4. Quickselect\n"
+    "### 4.4. Quickselect\n",
+    "\n",
+    "Quickselect is an algorithm with a similar approach. It's a hybrid of Quicksort and a binary search.\n",
+    "\n",
+    "> Given an unsorted array, find the fifth-highest value in the array.\n",
+    "\n",
+    "One approach would be to sort the array then pick the fifth element from the right. But sorting is $O(N log N)$ on average for the better algorithms. We can do better without having to sort the whole array.\n",
+    "\n",
+    "Recall that after a partition, the pivot ends up in the correct place in the array. This is crucial.\n",
+    "If we want to find the fifth highest value, we want to find the value that ends up in the fifth position from the right. So we can:\n",
+    "\n",
+    "1. Perform a partition and see where our pivot ends up.\n",
+    "2. If our pivot is too far left, partition the right subarray. If the pivot is too dar right, partition the left subarray.\n",
+    "3. Keep going until we find the pivot which ends up in our target spot."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def quickselect(array, target_position, start_idx=0, end_idx=None):\n",
+    "    \"\"\"Quickselect algorithm to find the target position (k-th lowest) element in an unsorted array.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "    target_position: int\n",
+    "        The kth lowest value that we want to find.\n",
+    "    start_idx: int\n",
+    "        The start index of the array to consider.\n",
+    "    end_index: int\n",
+    "        The end index of the array to consider.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The input array sorted in-place.\n",
+    "    \"\"\"\n",
+    "    end_idx = end_idx or len(array) - 1\n",
+    "\n",
+    "    # Base case: If the start index is greater than the end index, or if the target position is out of range\n",
+    "    if (start_idx > end_idx) or (target_position < 0) or (target_position > end_idx):\n",
+    "        return None\n",
+    "\n",
+    "    # 1. Partition the array\n",
+    "    array, pivot_idx = partition(array, start_idx, end_idx)\n",
+    "\n",
+    "    # 2. Recursively process the subarrays\n",
+    "    if pivot_idx < target_position:\n",
+    "        # The pivot is too small, so check the subarray to the right\n",
+    "        return quickselect(array, target_position, start_idx=pivot_idx + 1, end_idx=end_idx)\n",
+    "    elif pivot_idx > target_position:\n",
+    "        # The pivot is too big, so check the subarray to the left\n",
+    "        return quickselect(array, target_position, start_idx=start_idx, end_idx=pivot_idx - 1)\n",
+    "    else:\n",
+    "        # The pivot is at the target position - we have found our target!\n",
+    "        return array[pivot_idx]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "quickselect(input_array, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5. Complexity of Quickselect\n",
+    "\n",
+    "In the average case, we are splitting the subarrays (roughly) in half each time.\n",
+    "\n",
+    "Each split is operating on a subarray of half the size, so in total there are\n",
+    "$N + \\frac{N}{2} +  \\frac{N}{4} + \\frac{N}{8} + ... + 2 = 2N$ steps.\n",
+    "\n",
+    "THus, overall the complexity is $O(N)$ in the average case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
