--- a/posts/software/data_structures_algos/algorithms/algorithms.ipynb
+++ b/posts/software/data_structures_algos/algorithms/algorithms.ipynb
@@ -181,6 +181,91 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 4. Space Complexity\n",
+    "\n",
+    "Often the primary focus of an algorithm is its speed, characterised by its time complexity - how many steps does the algorithm take for an input of N elements?\n",
+    "\n",
+    "But another useful dimension to analyse is its space complexity - how much **memory** does the algorithm consume for an input of N elements?\n",
+    "\n",
+    "It is important to note that space complexity *generally* only considers the *new data* that the algorithm is generating, not the original input. The extra space consumed by the new data is called **auxiliary space**.\n",
+    "\n",
+    "(However, some textbooks *do* include the original data in the space complexity, so it's important to check the convention being used.)\n",
+    "\n",
+    "\n",
+    "### 4.1. The Hidden Cost of Recursion\n",
+    "\n",
+    "A recursive function takes up a unit of memory for each call that it makes.\n",
+    "\n",
+    "Each time it is called, it adds an item (the function call itself and any additional parameters) on the call stack. So to understand its space complexity, we need to determine how big the call stack can get at its peak, i.e. how many recursive calls it makes.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Code Optimisation Techniques\n",
+    "\n",
+    "The first step towards optimising your code is understanding its current complexity.\n",
+    "\n",
+    "\n",
+    "### 5.1. The Best Imaginable Big O\n",
+    "\n",
+    "What is the best complexity you can imagine?\n",
+    "\n",
+    "Also called the best-conceivable runtime.\n",
+    "\n",
+    "For example, if a problem requires processing every unit of a list, then you will have to visit all $N$ elements, so the best you can do is probably $O(N)$. You won't necessarily be able to achieve this, but it gives you an indication of the potential.\n",
+    "\n",
+    "1. Determine your current algorithm's Big O\n",
+    "2. Determine the best-imaginable Big O\n",
+    "3. If they're different, try optimising\n",
+    "\n",
+    "Another mental trick that can be helpful is to pick a really fast Big  and ask yourself \n",
+    "\"If someone told me they had an algorithm to achieve this Big O, would I believe them?\"\n",
+    "\n",
+    "\n",
+    "### 5.2. Magical Lookups\n",
+    "\n",
+    "Ask yourself: \"If I could magically look up a desired piece of information in $O(1)$ time, could I make my algorithm faster?\"\n",
+    "\n",
+    "If so, you may be able to bring in an additional data structure to accommodate this look up. Often this is a hash table.\n",
+    "\n",
+    "\n",
+    "### 5.3. Recognising Patterns\n",
+    "\n",
+    "Start with several smaller cases of the problem and work through the answers by hand.\n",
+    "\n",
+    "Does a pattern emerge that might generalise to bigger cases?\n",
+    "\n",
+    "\n",
+    "### 5.4. Greedy Algorithms\n",
+    "\n",
+    "A greedy algorithm, at each step, chooses what appears to be the current best option.\n",
+    "\n",
+    "This local optimisation doesn't necessarily find the global optimal solution. But it can be sueful in situations where finding the absolute best option is not necessary or practical.\n",
+    "\n",
+    "\n",
+    "### 5.5. Change the Data Structure\n",
+    "\n",
+    "If the input data were stored as a different data structure, would it make the problem easier?\n",
+    "\n",
+    "In some cases, it can be worthwhile performing a pre-compute step to convert the data structure if it then allows faster algorithms to be run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "- A common sense guide to data structures and algorithms, Jay Wengrow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
