--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -1060,12 +1060,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "18a3b4c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 8. Linked Lists"
+   ]
   }
  ],
  "metadata": {
